src/style/components/_provider_card.sass
.user-providers
  @apply text-center max-h-full max-w-full

.providers-grid
  @apply grid grid-cols-5 gap-4 my-8
    
.provider
    &-card
        @apply outline outline-1 outline-gray-300 rounded-full text-center cursor-pointer transition-transform duration-200 flex items-center justify-center
        &.selected
            @apply outline-blue-500 outline-2 transform scale-110

    &-logo-container
        @apply w-16 h-16 flex items-center justify-center overflow-hidden rounded-full

    &-logo
        @apply w-full h-full object-cover

